# LumiFramework

./: .clang-format  .clang-tidy  .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  CONTRIBUTING  CONTRIBUTING.md  LICENSE  NOTICE  README.md  RELEASE_NOTE.md  RELEASE_NOTES.md  SECURITY.md  clang-format-fix.sh  clang-format.sh  clang-tidy-fix.sh  clang-tidy.sh  codecov.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: clang-format.yml  clang-tidy.yml  code-cov.yml  cpp-ci-linux.yml  cpp-ci.yml  docs.yml  install-test.yml  lint.yml  tag-release.yml
cmake/: .clang-tidy.in  Lumi-config.cmake.in  lumi-config.cmake.in  utils.cmake
docs/: Doxyfile.in  disable-sync.css  doxygen-awesome-fragment-copy-button.js  doxygen-awesome.css  header.html
examples/: CMakeLists.txt  main.cpp  main.h
include/: test.h
include/Lumi/: Metadata.h.in  export.h  lumi.h
include/Lumi/Core/: Core.h  CoreMeta.h  ErrorFunny.h  ErrorHandler.h  Info.h
include/Lumi/window/: main.h
include/lumi/: metadata.cppm.in
include/lumi/core/: buildinfo.cppm  core.cppm  core.h  error_funny.cppm  error_funny.h  error_handler.cppm  error_handler.h  info.cppm  info.h  stacktrace.cppm  systeminfo.cppm  unit.cppm
res/: DESCRIPTION
src/: lumi.cpp  test.cpp
src/core/: CMakeLists.txt  buildinfo.cpp  core.cpp  core.ixx  coremeta.cpp  error_funny.cpp  error_funny.ixx  error_handler.cpp  info.cpp  info.cppm  info.ixx  metadata.ixx.in  stacktrace.cpp  systeminfo.cpp  systeminfo_linux.cpp  systeminfo_mac.cpp  unit.cpp
src/window/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  main.cpp  main.h
tests/install/: CMakeLists.txt  main.cpp  main.h
